<resources>
    <string name="app_name">BitChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Login</string>
    <string name="user_number">Username</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="send">Send</string>
</resources>
